--- a/source/sass/blocks/addons.scss
+++ b/source/sass/blocks/addons.scss
@@ -13,6 +13,12 @@
     height: 2px;
     content: "";
     background-color: $color__green;
+
+    @media (--not-narrow-vp) {
+      top: 23px;
+      right: 0;
+      width: 100vw;
+    }
   }
 }
 
@@ -23,27 +29,15 @@
 
   @include line-height(24,24,36,36);
   @include font-size(24,36);
-}
 
-@media (min-width: $tablet-width) {
-  .addons__title {
+  @media (--not-narrow-vp) {
     padding-left: 70px;
     margin-bottom: 80px;
   }
-}
 
-@media (min-width: $desktop-width) {
-  .addons__title {
+  @media (--wide-vp) {
     width: 1300px;
     margin-left: auto;
     margin-right: auto;
-  }
-}
-
-@media (min-width: $tablet-width) {
-  .addons::after {
-    top: 23px;
-    right: 0;
-    width: 100vw;
   }
 }
