--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,9 +1,7 @@
 .catalog {
   margin-bottom: 22px;
-}
 
-@media (min-width: $tablet-width) {
-  .catalog {
+  @media (--not-narrow-vp) {
     padding-bottom: 30px;
     margin-bottom: 35px;
   }
@@ -19,18 +17,14 @@
 
   @include line-height(36, 36, 60, 60);
   @include font-size(36, 60);
-}
 
-@media (min-width: $tablet-width) {
-  .catalog__title {
+  @media (--not-narrow-vp) {
     margin-top: 22px;
     margin-bottom: 123px;
     border: none;
   }
-}
 
-@media (min-width: $desktop-width) {
-  .catalog__title {
+  @media (--wide-vp) {
     margin-top: 43px;
     margin-bottom: 126px;
     border: none;
@@ -39,19 +33,15 @@
 
 .catalog__products {
   @include reset-list;
-}
 
-@media (min-width: $tablet-width) {
-  .catalog__products {
+  @media (--not-narrow-vp) {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 8%;
     row-gap: 139px;
   }
-}
 
-@media (min-width: $desktop-width) {
-  .catalog__products {
+  @media (--wide-vp) {
     grid-template-columns: repeat(4, 1fr);
     column-gap: 6%;
     row-gap: 140px;
