--- a/source/sass/blocks/contacts-outer.scss
+++ b/source/sass/blocks/contacts-outer.scss
@@ -1,17 +1,15 @@
 .contacts-outer {
   background-color: $color__white;
-}
 
-.contacts-outer--dark {
-  background-color: $color__grey;
-}
-
-@media (min-width: $desktop-width) {
-  .contacts-outer {
+  @media (--wide-vp) {
     width: 1300px;
     padding-left: 40px;
     padding-right: 40px;
     margin: 0 auto;
     box-sizing: border-box;
+  }
+
+  &--dark {
+    background-color: $color__grey;
   }
 }
