--- a/source/sass/blocks/demo-slider.scss
+++ b/source/sass/blocks/demo-slider.scss
@@ -2,18 +2,14 @@
   position: relative;
   box-sizing: border-box;
   padding-bottom: 42px;
-}
 
-@media (min-width: $tablet-width) {
-  .demo-slider {
+  @media (--not-narrow-vp) {
     padding-top: 50px;
     padding-bottom: 38px;
     left: 14px;
   }
-}
 
-@media (min-width: $desktop-width) {
-  .demo-slider {
+  @media (--wide-vp) {
     left: 0;
     margin-top: -90px;
   }
@@ -25,18 +21,16 @@
   padding-bottom: 10px;
 }
 
-@media (min-width: $tablet-width) {
-  .cat-fat {
+.cat-fat {
+  @media (--not-narrow-vp) {
     display: none;
   }
 }
 
 .cats-static {
   display: none;
-}
 
-@media (min-width: $tablet-width) {
-  .cats-static {
+  @media (--not-narrow-vp) {
     display: block;
   }
 }
