--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -7,16 +7,9 @@
   padding: 0;
   font-family: "Oswald", sans-serif;
   font-weight: 400;
-}
+  font-size: $font_mobi-size;
 
-@media (max-width: $tablet-width) {
-  .page__body {
-    font-size: $font_mobi-size;
-  }
-}
-
-@media (min-width: $tablet-width) {
-  .page__body {
+  @media (--not-narrow-vp) {
     font-size: $font_default-size;
   }
 }
