--- a/source/sass/blocks/workflow.scss
+++ b/source/sass/blocks/workflow.scss
@@ -2,17 +2,13 @@
   box-sizing: border-box;
   padding-top: 6px;
   padding-bottom: 50px;
-}
 
-@media (min-width: $tablet-width) {
-  .workflow {
+  @media (--not-narrow-vp) {
     padding-top: 35px;
     padding-bottom: 25px;
   }
-}
 
-@media (min-width: $desktop-width) {
-  .workflow {
+  @media (--wide-vp) {
     padding-top: 60px;
     padding-bottom: 25px;
   }
@@ -25,10 +21,8 @@
 
   @include line-height(36, 40, 60, 60);
   @include font-size(36, 60);
-}
 
-@media (min-width: $tablet-width) {
-  .workflow__title {
+  @media (--not-narrow-vp) {
     margin: 0 0 71px 0;
   }
 }
@@ -39,18 +33,14 @@
   row-gap: 20px;
 
   @include reset-list();
-}
 
-@media (min-width: $tablet-width) and (max-width: $desktop-width) {
-  .workflow__list {
+  @media (--middle-vp) {
     grid-template-columns: repeat(2, 1fr);
     row-gap: 37px;
     column-gap: 8%;
   }
-}
 
-@media (min-width: $desktop-width) {
-  .workflow__list {
+  @media (--wide-vp) {
     grid-template-columns: repeat(4, 1fr);
     row-gap: 15px;
     column-gap: 80px;
@@ -62,23 +52,48 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  font-family: $font__standard;
+  font-family: var(--main-font);
 
   @include line-height(14, 18, 16, 24);
   @include font-size(14, 16);
 
-  &::before {
-    position: absolute;
+  @media (--narrow-vp) {
     display: block;
-    height: 60px;
+    box-sizing: border-box;
+    padding: 3px 5px 0 80px;
+    min-height: 60px;
+  }
+
+  @media (--not-narrow-vp) {
+    flex-direction: column;
+    min-height: 156px;
+    // padding: 113px 65px 10px 0;
+    // width: 80%;
+    padding: 113px 0 10px 0;
+    width: 100%;
+  }
+
+  &::before {
     content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60px;
+    height: 60px;
     background-color: $color__green;
     background-repeat: no-repeat;
     background-position: center;
     color: $color__dark-grey;
+
+    @media (--not-narrow-vp) {
+      margin-bottom: 20px;
+      width: 80px;
+      height: 80px;
+    }
   }
 
   &::after {
+    content: counter(li);
     position: absolute;
     top: -40px;
     left: 115px;
@@ -89,96 +104,37 @@
     padding: 0;
     margin: 0;
     counter-increment: li;
-    content: counter(li);
     font-weight: inherit;
     color: #f2f2f2;
-    font-family: $font__main;
+    font-family: var(--accent-font);
     font-size: 280px;
     line-height: 17.5rem;
-  }
-}
 
-@media (max-width: $tablet-width - 1px) {
-  .workflow__item br {
-    display: none;
-  }
-}
-
-@media (max-width: $tablet-width - 1px) {
-  .workflow__item {
-    display: block;
-    box-sizing: border-box;
-    padding: 3px 5px 0 80px;
-    min-height: 60px;
-
-    &::before {
-      top: 0;
-      left: 0;
-      width: 60px;
-    }
-  }
-}
-
-@media (min-width: $tablet-width) {
-  .workflow__item {
-    flex-direction: column;
-    min-height: 156px;
-    padding: 113px 65px 10px 0;
-    width: 80%;
-
-    &::before {
-      position: absolute;
-      top: 0;
-      left: 0;
-      margin-bottom: 20px;
-      width: 80px;
-      height: 80px;
-    }
-  }
-}
-
-@media (min-width: $tablet-width) {
-  .workflow__item {
-    flex-direction: column;
-    min-height: 156px;
-    padding: 113px 0 10px 0;
-    width: 100%;
-
-    &::before {
-      position: absolute;
-      top: 0;
-      left: 0;
-      margin-bottom: 20px;
-      width: 80px;
-      height: 80px;
-    }
-
-    &::after {
+    @media (--not-narrow-vp) {
       display: flex;
     }
   }
 }
 
+.workflow__item br {
+  @media (--narrow-vp) {
+    display: none;
+  }
+}
+
 //block background-images
 .workflow__item--health::before {
-  background-image: url("../img/svg/icon_leaf.svg");
+  background-image: url("../../icons/sprite.svg#leaf");
 }
 
 .workflow__item--brew::before {
-  background-image: url("../img/svg/icon_tub.svg");
+  background-image: url("../../icons/sprite.svg#tub");
 }
 
 .workflow__item--change::before {
-  background-image: url("../img/svg/icon_eat.svg");
+  background-image: url("../../icons/sprite.svg#eat");
 }
 
 .workflow__item--profit::before {
-  background-image: url("../img/svg/icon_alarm.svg");
+  background-image: url("../../icons/sprite.svg#alarm");
 }
-
-/*
-@media (min-width: $tablet-width) {
-  .workflow__item::after {
-  }
-}
-*/
