--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -3,18 +3,14 @@
   padding-right: 20px;
   margin: 0 auto;
   box-sizing: border-box;
-}
 
-@media (min-width: $tablet-width) {
-  .container {
+  @media (--not-narrow-vp) {
     padding-left: 30px;
     padding-right: 30px;
   }
-}
 
-@media (min-width: $desktop-width) {
-  .container {
-    width: $desktop-width;
+  @media (--wide-vp) {
+    width: 1280px;
     padding-left: 40px;
     padding-right: 40px;
   }
