--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -4,8 +4,8 @@
   font-display: swap;
   font-weight: 400;
   src:
-    url("../fonts/oswaldregular.woff2") format("woff2"),
-    url("../fonts/oswaldregular.woff") format("woff");
+    url("../../fonts/oswaldregular.woff2") format("woff2"),
+    url("../../fonts/oswaldregular.woff") format("woff");
 }
 
 @font-face {
@@ -14,6 +14,11 @@
   font-display: swap;
   font-weight: 500;
   src:
-    url("../fonts/oswaldmedium.woff2") format("woff2"),
-    url("../fonts/oswaldmedium.woff") format("woff");
+    url("../../fonts/oswaldmedium.woff2") format("woff2"),
+    url("../../fonts/oswaldmedium.woff") format("woff");
+}
+
+:root {
+  --accent-font: "Oswald", "Impact", sans-serif;
+  --main-font: "Arial", "Helvetica", sans-serif;
 }
